Project: Update readme and images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="left"></div>
           <div class="right"></div>
         </div>
-        <div class="front">Mesa de tennis - www.bcl-st.com.br</div>
+        <div class="front">Mesa de tênis - www.bcl-st.com.br</div>
         <div class="back">Table tennis - @bcl_st</div>
         <div class="left"></div>
         <div class="right"></div>
